Used 'undiscardable' to protect a future in MesosContainerizer.

This patch addressed MESOS-7926 by protecting 'termination.future()'
with 'undiscardable'. This prevented the upstream discard event from
being propagated into 'termination.future()' which gets reused for
other calls.

Review: https://reviews.apache.org/r/62005